--- a/article_4.tex
+++ b/article_4.tex
@@ -87,6 +87,9 @@ The Carry Protocol introduces a transformative approach to integrating advertisi
 %	INTRODUCTION
 %----------------------------------------------------------------------------------------
 
+\include{introduction}
+%----------------------------------------------------------------------------------------
+
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
